feat: wrap under express router

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "moduleResolution": "node"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "types": ["node", "express"]
 } 
