--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "start": "node dist/server.js",
+    "dev": "ts-node src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,8 +18,10 @@
     "@mastra/core": "^0.9.4",
     "@mastra/pg": "^0.3.4",
     "@mastra/rag": "^0.1.23",
+    "@types/express": "^5.0.1",
     "ai": "^4.3.15",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
