--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^5.0.1",
     "ai": "^4.3.15",
     "bcrypt": "^6.0.0",
+    "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -29,12 +30,12 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.24",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.0",
+    "@types/node": "^20.11.24",
     "@types/pg": "^8.10.0",
-    "@types/uuid": "^9.0.0"
+    "@types/uuid": "^9.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
