--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^5.0.1",
     "ai": "^4.3.15",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.18",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^20.11.24",
     "@types/pg": "^8.10.0",
