feat: readme & docs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,14 @@ services:
     environment:
       - NODE_ENV=production
       - POSTGRES_CONNECTION_STRING=postgresql://postgres:postgres@db:5432/ragnet
-      - JWT_SECRET=helloshubham
+      - JWT_SECRET=...
+      - OPENAI_API_KEY=...
+      - DISCORD_BOT_TOKEN=...
+      - DISCORD_CLIENT_ID=...
+      - DISCORD_CLIENT_SECRET=...
+      - DISCORD_REDIRECT_URI=...
+      - FRONTEND_URL=...
+      - INGEST_DOCS=false
       - PG_HOST=db
       - PG_PORT=5432
       - PG_USER=postgres
