feat: added new APIs

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ DISCORD_CLIENT_ID=...
 DISCORD_CLIENT_SECRET=...
 DISCORD_REDIRECT_URI=http://localhost:3000/api/auth/discord/callback
 FRONTEND_URL=http://localhost:3000
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/ragnet
+RAG_API_URL=http://localhost:3001
+INFRA_RAG_KEY=""
