feat: discord output

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
       - POSTGRES_CONNECTION_STRING=postgresql://postgres:postgres@db:5432/ragnet
       - JWT_SECRET=...
       - OPENAI_API_KEY=...
-      - DISCORD_BOT_TOKEN=...
-      - DISCORD_CLIENT_ID=...
-      - DISCORD_CLIENT_SECRET=...
-      - DISCORD_REDIRECT_URI=...
+      # - DISCORD_BOT_TOKEN={DISCORD_BOT_TOKEN}
+      # - DISCORD_CLIENT_ID={DISCORD_CLIENT_ID}
+      # - DISCORD_CLIENT_SECRET={DISCORD_CLIENT_SECRET}
+      # - DISCORD_REDIRECT_URI={DISCORD_REDIRECT_URI}
       - FRONTEND_URL=...
       - INGEST_DOCS=false
       - PG_HOST=db
